[gd_scene load_steps=10 format=3 uid="uid://cgvoe5lur66xe"]

[ext_resource type="Texture2D" uid="uid://dild8w4nn3ui3" path="res://Assets/Opening/Tizio.png" id="1_qvegp"]
[ext_resource type="Script" path="res://Scripts/UI/CinematicIntro.gd" id="1_wwmqq"]
[ext_resource type="Texture2D" uid="uid://dv2hner21yhro" path="res://Assets/Opening/Hammer.png" id="2_64rjm"]
[ext_resource type="Texture2D" uid="uid://b3x2egx4ixo1v" path="res://Assets/Opening/Together.png" id="3_lsdp7"]
[ext_resource type="FontFile" uid="uid://vqr151sphmyi" path="res://Assets/UI/Fonts/CaesarDressing-Regular.ttf" id="4_5eepv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_27kya"]
bg_color = Color(0.117647, 0.117647, 0.117647, 0.862745)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Animation" id="Animation_sbd65"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRectForeground:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_8elpl"]
resource_name = "loading_screen"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRectForeground:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b6fhh"]
_data = {
"RESET": SubResource("Animation_sbd65"),
"loading_screen": SubResource("Animation_8elpl")
}

[node name="CinematicIntro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wwmqq")

[node name="ColorRectBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Tizio_TextureRect" type="TextureRect" parent="ColorRectBackground"]
layout_mode = 2
offset_left = 278.0
offset_top = 100.0
offset_right = 942.0
offset_bottom = 700.0
texture = ExtResource("1_qvegp")
expand_mode = 1

[node name="Hammer_TextureRect" type="TextureRect" parent="ColorRectBackground"]
visible = false
layout_mode = 2
offset_left = 276.001
offset_top = 66.0
offset_right = 944.001
offset_bottom = 734.0
texture = ExtResource("2_64rjm")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Together_TextureRect" type="TextureRect" parent="ColorRectBackground"]
visible = false
layout_mode = 2
offset_left = 276.001
offset_top = 66.0
offset_right = 944.001
offset_bottom = 734.0
texture = ExtResource("3_lsdp7")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Textbox1" type="Panel" parent="ColorRectBackground"]
visible = false
layout_mode = 0
offset_left = 131.0
offset_top = 602.0
offset_right = 614.0
offset_bottom = 729.0
theme_override_styles/panel = SubResource("StyleBoxFlat_27kya")

[node name="Label" type="Label" parent="ColorRectBackground/Textbox1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_5eepv")
theme_override_font_sizes/font_size = 30
text = "Oh man, fuck these giants"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Textbox2" type="Panel" parent="ColorRectBackground"]
visible = false
layout_mode = 0
offset_left = 960.0
offset_top = 394.0
offset_right = 1443.0
offset_bottom = 521.0
theme_override_styles/panel = SubResource("StyleBoxFlat_27kya")

[node name="Label" type="Label" parent="ColorRectBackground/Textbox2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -193.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_5eepv")
theme_override_font_sizes/font_size = 30
text = "I agree"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Textbox3" type="Panel" parent="ColorRectBackground"]
visible = false
layout_mode = 0
offset_left = 131.0
offset_top = 602.0
offset_right = 614.0
offset_bottom = 729.0
theme_override_styles/panel = SubResource("StyleBoxFlat_27kya")

[node name="Label" type="Label" parent="ColorRectBackground/Textbox3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_5eepv")
theme_override_font_sizes/font_size = 30
text = "Who is there?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Textbox4" type="Panel" parent="ColorRectBackground"]
visible = false
layout_mode = 0
offset_left = 110.0
offset_top = 567.0
offset_right = 1069.0
offset_bottom = 758.0
theme_override_styles/panel = SubResource("StyleBoxFlat_27kya")

[node name="Label" type="Label" parent="ColorRectBackground/Textbox4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_5eepv")
theme_override_font_sizes/font_size = 55
text = "MJÃ–llNIR, THE HAMMER OF THE GODS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Textbox5" type="Panel" parent="ColorRectBackground"]
visible = false
layout_mode = 0
offset_left = 131.0
offset_top = 602.0
offset_right = 614.0
offset_bottom = 729.0
theme_override_styles/panel = SubResource("StyleBoxFlat_27kya")

[node name="Label" type="Label" parent="ColorRectBackground/Textbox5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_5eepv")
theme_override_font_sizes/font_size = 30
text = "okay"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Textbox6" type="Panel" parent="ColorRectBackground"]
visible = false
layout_mode = 0
offset_left = 595.0
offset_top = 602.0
offset_right = 1078.0
offset_bottom = 729.0
theme_override_styles/panel = SubResource("StyleBoxFlat_27kya")

[node name="Label" type="Label" parent="ColorRectBackground/Textbox6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_5eepv")
theme_override_font_sizes/font_size = 30
text = "Follow me, let's get out of here!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Textbox7" type="Panel" parent="ColorRectBackground"]
visible = false
layout_mode = 0
offset_left = 131.0
offset_top = 602.0
offset_right = 614.0
offset_bottom = 729.0
theme_override_styles/panel = SubResource("StyleBoxFlat_27kya")

[node name="Label" type="Label" parent="ColorRectBackground/Textbox7"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_5eepv")
theme_override_font_sizes/font_size = 30
text = "okay"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Textbox8" type="Panel" parent="ColorRectBackground"]
visible = false
layout_mode = 0
offset_left = 131.0
offset_top = 602.0
offset_right = 614.0
offset_bottom = 729.0
theme_override_styles/panel = SubResource("StyleBoxFlat_27kya")

[node name="Label" type="Label" parent="ColorRectBackground/Textbox8"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_5eepv")
theme_override_font_sizes/font_size = 30
text = "Are you gonna break these chains or...?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Textbox9" type="Panel" parent="ColorRectBackground"]
visible = false
layout_mode = 0
offset_left = 595.0
offset_top = 602.0
offset_right = 1078.0
offset_bottom = 729.0
theme_override_styles/panel = SubResource("StyleBoxFlat_27kya")

[node name="Label" type="Label" parent="ColorRectBackground/Textbox9"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_5eepv")
theme_override_font_sizes/font_size = 30
text = "Just keep throwing me, I'll handle the rest"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b6fhh")
}
autoplay = "loading_screen"

[node name="ColorRectForeground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true
